[project]
name = "mvllm"
version = "0.1.0"
description = "A FastAPI-based load balancer for vLLM servers with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "toml>=0.10.2",
    "pydantic>=2.5.0",
    "openai",
    "loguru>=0.7.0",
    "requests>=2.32.5",
    "psutil>=7.1.0",
    "rich>=14.1.0",
    "aiohttp>=3.12.15",
    "typer>=0.19.2",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mvllm = "mvllm.cli:app"
